--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,10 @@
-// Начните писать стили здесь
+@import "global";
+@import "container";
+@import "variables";
+@import "mixins";
+@import "fonts";
+@import "blocks/page";
+@import "blocks/page-body";
+@import "blocks/page-header";
+@import "blocks/menu";
+@import "blocks/promo";
