--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -1,21 +1,21 @@
-$basic-green: #68B738;
-$basic-grey: #F2F2F2;
-$pinkgrey: #EBEBEB;
-$lightgrey: #CDCDCD;
+$basic-green: #68b738;
+$basic-grey: #f2f2f2;
+$pinkgrey: #ebebeb;
+$lightgrey: #cdcdcd;
 $grey: #666666;
 $browngrey: #444444;
 $darkgrey: #222222;
-$salmon: #FF8282;
-$special-green: #5EAA2F;
-$special-pink: #E6E6E6;
+$salmon: #ff8282;
+$special-green: #5eaa2f;
+$special-pink: #e6e6e6;
 $white: #ffffff;
 $black: #000000;
-$pink: #D9D9D9;
-$beige: #EAEAEA;
+$pink: #d9d9d9;
+$beige: #eaeaea;
 
 
 $text-main: $browngrey;
-$text-special: $white;
+$text-promo: $white;
 $text-dark: $black;
 $main: $basic-green;
 $main-special: $special-green;
@@ -23,3 +23,4 @@ $light-back: $pink;
 $dark-back: $beige;
 $back: $basic-grey;
 $error: $salmon;
+$border: $lightgrey;
