--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,3 +8,11 @@
 @import "blocks/page-header";
 @import "blocks/menu";
 @import "blocks/promo";
+@import "blocks/primary-button";
+@import "blocks/offers";
+@import "blocks/offer";
+@import "blocks/features";
+@import "blocks/example";
+@import "blocks/slider";
+@import "blocks/page-footer";
+@import "blocks/socials";
