--- a/source/sass/blocks/_menu.scss
+++ b/source/sass/blocks/_menu.scss
@@ -1,8 +1,7 @@
 .menu {
-  padding: 0;
-
-  list-style: none;
   @include special-text-medium;
+  padding: 0;
+  list-style: none;
   font-size: 20px;
   line-height: 20px;
   text-transform: uppercase;
@@ -19,11 +18,15 @@
   padding-top: 22px;
   padding-bottom: 24px;
 
-  border-top: 1px solid #E6E6E6;
-  border-bottom: 1px solid #E6E6E6;
+  border-top: 1px solid $special-pink;
+  border-bottom: 1px solid $special-pink;
 
   &:nth-child(2) {
     border: none;
+  }
+
+  &:last-child {
+    border-bottom: none;
   }
 }
 
