--- a/source/sass/blocks/_promo.scss
+++ b/source/sass/blocks/_promo.scss
@@ -1,3 +1,36 @@
+.promo {
+  padding-bottom: 22px;
+}
+
 .promo__wrapper {
-  background: url("../../img/catalog/mobile/promo-background.jpg");
+  background-image: url("../../img/catalog/mobile/promo-background.jpg");
+  background-repeat: no-repeat;
+}
+
+.promo__inner {
+  padding: 27px 35px;
+  min-height: 302px;
+
+  @include special-text;
+  text-align: center;
+  color: $text-promo;
+  background-color: rgba(104, 183, 56, 0.85);
+}
+
+.promo__title {
+  margin: 0 0 25px 0;
+
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 36px;
+}
+
+.promo__slogan {
+  font-size: 14px;
+  line-height: 14px;
+  text-transform: uppercase;
+}
+
+.promo__btn {
+  padding: 12px 73px;
 }
