Правки и зеленый кот

--- a/source/sass/_mixins.scss
+++ b/source/sass/_mixins.scss
@@ -1,23 +1,5 @@
-@mixin primary-text {
-  font: {
-    family: "Arial", sans-serif;
-    style: normal;
-    weight: normal;
-  }
-}
-
-@mixin special-text {
-  font: {
-    family: "Oswald", "Arial", sans-serif;
-    style: normal;
-    weight: 400;
-  }
-}
-
-@mixin special-text-medium {
-  font: {
-    family: "Oswald", "Arial", sans-serif;
-    style: normal;
-    weight: 500;
-  }
+@mixin list-reset {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
