--- a/source/sass/blocks/_primary-button.scss
+++ b/source/sass/blocks/_primary-button.scss
@@ -1,7 +1,7 @@
 .primary-button {
-  @include special-text;
   font-size: 14px;
   line-height: 18px;
+  font-family: "Oswald", "Arial", sans-serif;
   text-transform: uppercase;
   color: $text-promo;
 
