--- a/source/sass/blocks/_offer.scss
+++ b/source/sass/blocks/_offer.scss
@@ -12,9 +12,10 @@
   padding-left: 91px;
   margin: 0 0 29px 0;
 
-  @include special-text;
+  font-weight: 400;
   font-size: 24px;
   line-height: 37px;
+  font-family: "Oswald", "Arial", sans-serif;
   text-transform: uppercase;
   color: $text-dark;
 }
@@ -31,9 +32,9 @@
 }
 
 .offer__link {
-  @include special-text;
   font-size: 16px;
   line-height: 16px;
+  font-family: "Oswald", "Arial", sans-serif;
   text-align: center;
   text-transform: uppercase;
   color: $text-dark;
