--- a/source/sass/blocks/_page.scss
+++ b/source/sass/blocks/_page.scss
@@ -1,3 +1,17 @@
 .page {
   height: 100%;
 }
+
+.page__body {
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
+  min-height: 100%;
+  margin: 0;
+
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 24px;
+  font-family: "Arial", sans-serif;
+}
