--- a/source/sass/blocks/_socials.scss
+++ b/source/sass/blocks/_socials.scss
@@ -1,10 +1,9 @@
 .socials {
+  @include list-reset;
   display: flex;
   align-items: center;
   padding: 20px 77px 17px 73px;
-  margin: 0;
   min-width: 130px;
-  list-style: none;
   border-top: 1px solid $special-pink;
   border-bottom: 1px solid $special-pink;
 }
