--- a/source/sass/blocks/_menu.scss
+++ b/source/sass/blocks/_menu.scss
@@ -1,4 +1,5 @@
 .menu {
+  display: none;
   padding: 0;
 
   font-weight: 500;
@@ -18,6 +19,10 @@
   padding-bottom: 24px;
 
   border-top: 1px solid $special-pink;
+
+  &:first-child {
+    border: none;
+  }
 }
 
 .menu__link {
