--- a/source/sass/blocks/_primary-button.scss
+++ b/source/sass/blocks/_primary-button.scss
@@ -1,4 +1,5 @@
 .primary-button {
+  display: block;
   font-size: 14px;
   line-height: 18px;
   font-family: "Oswald", "Arial", sans-serif;
@@ -6,4 +7,5 @@
   color: $text-promo;
 
   background-color: $main;
+  border: none;
 }
