--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,3 +15,7 @@
 @import "blocks/slider";
 @import "blocks/page-footer";
 @import "blocks/socials";
+@import "blocks/page-content";
+@import "blocks/form";
+@import "blocks/radio-button";
+@import "blocks/checkbox";
