--- a/source/sass/blocks/_checkbox.scss
+++ b/source/sass/blocks/_checkbox.scss
@@ -1,11 +1,11 @@
 .checkbox {
   padding-right: 10px;
-  padding-left: 45px;
 }
 
 .checkbox .checkbox__label {
   position: relative;
   display: block;
+  padding-left: 45px;
   cursor: pointer;
   user-select: none;
 }
@@ -13,7 +13,7 @@
 .checkbox__input + .checkbox__label::before {
   content: " ";
   position: absolute;
-  left: -45px;
+  left: 0;
   top: -5px;
   width: 30px;
   height: 30px;
@@ -30,7 +30,7 @@
   content: "";
   position: absolute;
   top: -5px;
-  left: -45px;
+  left: 0;
   width: 30px;
   height: 30px;
 
