--- a/source/sass/blocks/_form.scss
+++ b/source/sass/blocks/_form.scss
@@ -5,9 +5,6 @@
 }
 
 .form__group {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: baseline;
   margin: 0;
   padding: 0 0 28px 0;
   border-top: none;
@@ -16,7 +13,6 @@
   border-bottom: 1px solid $light-back;
 
   &--program {
-    flex-direction: column;
     padding-top: 28px;
     padding-bottom: 25px;
   }
@@ -33,67 +29,8 @@
   }
 
   &--supplements {
-    flex-direction: column;
     padding-bottom: 34px;
     border: none;
-  }
-}
-
-.form__field {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: start;
-  margin: 0 0 10px 13px;
-  padding: 13px 14px 14px 16px;
-
-  border: 1px solid $special-grey;
-
-  &::placeholder {
-    font-size: 16px;
-    line-height: 18px;
-    font-family: "Oswald", "Arial", sans-serif;
-    text-transform: uppercase;
-    color: $text-main;
-  }
-
-  &--name {
-    margin-bottom: 11px;
-    margin-left: 13px;
-    padding-left: 14px;
-    width: 228px;
-  }
-
-  &--weight {
-    width: 204px;
-  }
-
-  &--age {
-    margin-bottom: 0;
-    width: 172px;
-  }
-
-  &--owner {
-    margin-left: 11px;
-    padding-top: 14px;
-    padding-bottom: 16px;
-    width: 219px;
-  }
-
-  &--tel {
-    margin-left: 8px;
-    padding-top: 14px;
-    padding-bottom: 16px;
-    padding-left: 16px;
-    width: 204px;
-  }
-
-  &--text {
-    width: 280px;
-    height: 150px;
-    margin: 0;
-    padding: 10px 12px 10px 15px;
-
-    resize: none;
   }
 }
 
@@ -120,7 +57,6 @@
   }
 
   &--supplements {
-
     padding-bottom: 34px;
   }
 }
@@ -150,4 +86,16 @@
   line-height: 16px;
   font-family: "Arial", sans-serif;
   text-transform: none;
+}
+
+.form__group-item {
+  margin-bottom: 12px;
+
+  &--owner {
+    margin-bottom: 14px;
+  }
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
