Правки по второму дз и чекбокс

--- a/source/sass/blocks/_checkbox.scss
+++ b/source/sass/blocks/_checkbox.scss
@@ -2,7 +2,7 @@
   padding-right: 10px;
 }
 
-.checkbox .checkbox__label {
+.checkbox__label {
   position: relative;
   display: block;
   padding-left: 45px;
@@ -10,7 +10,42 @@
   user-select: none;
 }
 
-.checkbox__input + .checkbox__label::before {
+//.checkbox__input + .checkbox__label::before,
+//.checkbox__input + .checkbox__label::after {
+//  content: " ";
+//  position: absolute;
+//  left: 0;
+//  top: -5px;
+//  width: 30px;
+//  height: 30px;
+//
+//  border: 1px solid $border;
+  //background-image: url("../img/checkbox-off.svg");
+  //background-repeat: no-repeat;
+//}
+
+//.checkbox__input:checked + .checkbox__label::before {
+//  display: none;
+//}
+
+.checkbox__input:checked + .checkbox_svg {
+  display: inline-grid;
+}
+
+.checkbox__input + .checkbox_svg {
+  display: none;
+}
+
+.checkbox_svg {
+  position: absolute;
+  top: 3px;
+  left: 7px;
+  margin: 0;
+  width: 18px;
+  height: 14px;
+}
+
+.checkbox__label::before {
   content: " ";
   position: absolute;
   left: 0;
@@ -18,22 +53,37 @@
   width: 30px;
   height: 30px;
 
-  background-image: url("../img/checkbox-off.svg");
-  background-repeat: no-repeat;
+  border: 1px solid $border;
 }
 
-.checkbox__input:checked + .filter__sign::before {
-  display: none;
+.checkbox_line {
+  fill: $basic-green;
+  stroke: $basic-green;
+  stroke-width: 0;
+  stroke-miterlimit: 4.0;
+  stroke-dasharray: 0, 154;
+}
+.checkbox.nochek .checkbox_svg .checkbox_line {
+  animation: nochecked 0.1s ease 1 forwards;
+}
+.checkbox [type=checkbox]:checked + .checkbox_svg .checkbox_line {
+  animation: checked 0.4s ease 1 forwards;
 }
 
-.checkbox__input:checked + .checkbox__label::after {
-  content: "";
-  position: absolute;
-  top: -5px;
-  left: 0;
-  width: 30px;
-  height: 30px;
+@keyframes checked {
+  from {
+    stroke-dasharray: 0, 154;
+  }
+  to {
+    stroke-dasharray: 140, 154;
+  }
+}
 
-  background-image: url("../img/checkbox-on.svg");
-  background-repeat: no-repeat;
+@keyframes nochecked {
+  from {
+    stroke-dasharray: 140, 154;
+  }
+  to {
+    stroke-dasharray: 0, 154;
+  }
 }
