--- a/source/sass/blocks/_feedback.scss
+++ b/source/sass/blocks/_feedback.scss
@@ -2,7 +2,7 @@
   display: inline-grid;
   grid-template-columns: auto 1fr;
   align-items: baseline;
-  width: 280px;
+  width: 100%;
 }
 
 .feedback__label {
