--- a/source/sass/blocks/_promo.scss
+++ b/source/sass/blocks/_promo.scss
@@ -1,6 +1,6 @@
 .promo {
   padding-bottom: 22px;
-  background: linear-gradient(to bottom, #63a63c, #63a63c 303px, transparent, transparent 302px);
+  background: linear-gradient(to bottom, $back-green, $back-green 303px, transparent, transparent 302px);
 }
 
 .promo__wrapper {
