--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -13,6 +13,7 @@ $white: #ffffff;
 $black: #000000;
 $special-lightgrey: #d9d9d9;
 $beige: #eaeaea;
+$green: #63a63c;
 
 
 $text-main: $browngrey;
@@ -26,3 +27,8 @@ $back: $basic-grey;
 $error: $salmon;
 $border: $lightgrey;
 $form-field: $special-grey;
+$back-green: $green;
+
+//text
+$arial: "Arial", sans-serif;
+$oswald: "Oswald", "Arial", sans-serif;
