--- a/source/sass/blocks/_radio-button.scss
+++ b/source/sass/blocks/_radio-button.scss
@@ -3,7 +3,7 @@
   padding-left: 0;
 }
 
-.radio-button .radio-button__label {
+.radio-button__label {
   position: relative;
   display: block;
   padding-left: 45px;
