--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -28,6 +28,9 @@ $error: $salmon;
 $border: $lightgrey;
 $form-field: $special-grey;
 $back-green: $green;
+$cards-border: $pinkgrey;
+$card-title: $darkgrey;
+$special-btn: $basic-grey;
 
 //text
 $arial: "Arial", sans-serif;
