--- a/source/sass/blocks/_menu.scss
+++ b/source/sass/blocks/_menu.scss
@@ -23,6 +23,10 @@
   &:first-child {
     border: none;
   }
+
+  &:last-child {
+    border-bottom: 1px solid $special-pink;
+  }
 }
 
 .menu__link {
