--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,4 +19,8 @@
 @import "blocks/form";
 @import "blocks/radio-button";
 @import "blocks/checkbox";
-@import "blocks/feedback";
+@import "blocks/form-control";
+@import "blocks/cards";
+@import "blocks/card";
+@import "blocks/add-goods";
+@import "blocks/add-good";
