--- a/source/sass/_container.scss
+++ b/source/sass/_container.scss
@@ -1,6 +1,7 @@
 .container {
   width: 320px;
   margin: 0 auto;
-  padding-left: 20px;
-  padding-right: 20px;
+
+  padding-left: 0;
+  padding-right: 0;
 }
