--- a/source/sass/blocks/_example.scss
+++ b/source/sass/blocks/_example.scss
@@ -4,9 +4,15 @@
   background-color: $dark-back;
 }
 
+.example__wrapper {
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
 .example__title {
   margin: 0 0 33px 0;
 
+  font-weight: 400;
   font-size: 36px;
   line-height: 40px;
   font-family: "Oswald", "Arial", sans-serif;
