--- a/source/sass/blocks/_form-control.scss
+++ b/source/sass/blocks/_form-control.scss
@@ -1,15 +1,15 @@
-.feedback {
+.form-control {
   display: inline-grid;
   grid-template-columns: auto 1fr;
   align-items: baseline;
   width: 100%;
 }
 
-.feedback__label {
+.form-control__label {
   margin-right: 13px;
 }
 
-.feedback__field {
+.form-control__field {
   padding: 13px 10px 14px 16px;
 
   font-size: 16px;
