--- a/source/sass/blocks/_form.scss
+++ b/source/sass/blocks/_form.scss
@@ -36,6 +36,8 @@
 
 .form__element {
   margin-bottom: 25px;
+  padding-right: 20px;
+  padding-left: 20px;
 
   &:last-child {
     margin-bottom: 0;
@@ -43,6 +45,9 @@
 }
 
 .form__text {
+  padding-right: 20px;
+  padding-left: 20px;
+
   font-size: 24px;
   line-height: 26px;
   text-transform: none;
@@ -63,6 +68,8 @@
 
 .form__item {
   margin-bottom: 25px;
+  padding-right: 20px;
+  padding-left: 20px;
 
   &:last-child {
     margin-bottom: 0;
@@ -70,6 +77,8 @@
 }
 
 .form__btn {
+  margin-right: 20px;
+  margin-left: 20px;
   margin-bottom: 21px;
   padding: 8px 78px;
 
@@ -87,6 +96,8 @@
 
 .form__group-item {
   margin-bottom: 12px;
+  padding-right: 20px;
+  padding-left: 20px;
 
   &--owner {
     margin-bottom: 14px;
