--- a/source/sass/blocks/_page-footer.scss
+++ b/source/sass/blocks/_page-footer.scss
@@ -1,12 +1,15 @@
+.page-footer {
+  background-color: $back;
+
+  &--index {
+    background-color: $white;
+  }
+}
+
 .page-footer__wrapper {
   display: flex;
   flex-wrap: wrap;
-  padding-top: 28px;
-  padding-bottom: 28px;
-
-  &--catalog {
-    background-color: $back;
-  }
+  padding: 28px 19px;
 }
 
 .page-footer__cooperation {
@@ -14,7 +17,7 @@
   margin: 0 15px 0 0;
   font-size: 16px;
   line-height: 18px;
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: $oswald;
   text-transform: uppercase;
 }
 
@@ -26,9 +29,10 @@
   color: $text-main;
 }
 
-.page-footer__map-image,
-.page-footer__map {
+.page-footer__map-image {
   display: flex;
+  width: 100%;
+  height: 362px;
 }
 
 .page-footer__contacts {
@@ -44,7 +48,7 @@
 .page-footer__copyright {
   display: flex;
   align-items: center;
-  padding: 22px 0;
+  padding: 22px 20px;
   font-size: 16px;
   line-height: 18px;
   color: $text-main;
