--- a/source/sass/blocks/_page-header.scss
+++ b/source/sass/blocks/_page-header.scss
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   align-items: center;
-  padding: 12px 0 16px 0;
+  padding: 12px 20px 16px;
 
   border-bottom: 1px solid $special-pink;
 }
