--- a/source/sass/blocks/_promo.scss
+++ b/source/sass/blocks/_promo.scss
@@ -4,6 +4,8 @@
 }
 
 .promo__wrapper {
+  padding-right: 20px;
+  padding-left: 20px;
   background-image: url("../img/background-green.jpg");
   background-repeat: no-repeat;
 }
