--- a/source/sass/blocks/_features.scss
+++ b/source/sass/blocks/_features.scss
@@ -1,6 +1,5 @@
 .features {
-  padding-right: 20px;
-  padding-left: 20px;
+  padding-bottom: 42px;
 }
 
 .features__title {
@@ -22,4 +21,8 @@
 
 .features__item {
   margin: 0 0 20px 80px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
