--- a/source/sass/blocks/_page-content.scss
+++ b/source/sass/blocks/_page-content.scss
@@ -10,7 +10,7 @@
 }
 
 .page-content__title {
-  margin: 0 20px 37px 20px;
+  margin: 0 0 37px;
 
   font-weight: normal;
   font-size: 36px;
@@ -23,8 +23,6 @@
 
 .page-content__description {
   margin: 0 0 39px 0;
-  padding-right: 20px;
-  padding-left: 20px;
   max-width: 226px;
   font-size: 14px;
   line-height: 18px;
@@ -32,19 +30,23 @@
 }
 
 .page-content__gift {
+  display: block;
   min-height: 289px;
-  background-image: url("../img/gift-back.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
+  margin-top: 39px;
 }
 
 .page-content__text {
   margin: 0;
-  padding: 186px 81px 0 78px;
+  padding: 186px 51px 43px 58px;
 
   text-align: center;
   font-size: 16px;
   line-height: 20px;
   font-family: $arial;
   color: $text-promo;
+
+  background-color: $main;
+  background-image: url("../img/gift-back.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
 }
