--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -31,7 +31,9 @@ $back-green: $green;
 $cards-border: $pinkgrey;
 $card-title: $darkgrey;
 $special-btn: $basic-grey;
+$special-border: $special-pink;
 
 //text
+
 $arial: "Arial", sans-serif;
 $oswald: "Oswald", "Arial", sans-serif;
