--- a/source/sass/blocks/_offer.scss
+++ b/source/sass/blocks/_offer.scss
@@ -6,18 +6,34 @@
   &--pro {
     margin-bottom: 0;
   }
+
+  @media (min-width: 768px) {
+    padding: 77px 53px 53px;
+    margin-bottom: 30px;
+  }
 }
 
 .offer__title {
+  display: flex;
+  flex-wrap: wrap;
   padding-left: 91px;
   margin: 0 0 29px 0;
 
   font-weight: 400;
   font-size: 24px;
   line-height: 37px;
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: $oswald;
   text-transform: uppercase;
   color: $text-dark;
+
+  @media (min-width: 768px) {
+    max-width: 377px;
+    padding-left: 0;
+    margin-bottom: 24px;
+
+    font-size: 36px;
+    line-height: 36px;
+  }
 }
 
 .offer__description {
@@ -29,13 +45,29 @@
   line-height: 18px;
   color: $text-main;
   border-bottom: 1px solid $light-back;
+
+  @media (min-width: 768px) {
+    max-width: 377px;
+    padding: 0;
+    margin-bottom: 48px;
+
+    font-size: 16px;
+    line-height: 24px;
+
+    border-bottom: none;
+  }
 }
 
 .offer__link {
   font-size: 16px;
   line-height: 16px;
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: $oswald;
   text-align: center;
   text-transform: uppercase;
   color: $text-dark;
+
+  @media (min-width: 768px) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
