--- a/source/sass/blocks/_page-footer.scss
+++ b/source/sass/blocks/_page-footer.scss
@@ -9,7 +9,13 @@
 .page-footer__wrapper {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
   padding: 28px 19px;
+
+  @media (min-width: 768px) {
+    padding: 62px 72px 51px 71px;
+  }
 }
 
 .page-footer__cooperation {
@@ -19,6 +25,12 @@
   line-height: 18px;
   font-family: $oswald;
   text-transform: uppercase;
+
+  @media (min-width: 768px) {
+    max-width: 171px;
+    font-size: 20px;
+    line-height: 21px;
+  }
 }
 
 .page-footer__address {
@@ -27,6 +39,19 @@
   font-style: normal;
   line-height: 20px;
   color: $text-main;
+
+  @media (min-width: 768px) {
+    max-width: 159px;
+    font-size: 16px;
+    text-align: end;
+  }
+
+  &--space {
+    @media (min-width: 768px) {
+      display: block;
+      margin-top: 23px;
+    }
+  }
 }
 
 .page-footer__map-image {
@@ -39,18 +64,42 @@
   background-color: $back;
 }
 
+.page-footer__container {
+  @media (min-width: 768px) {
+    display: flex;
+    align-items: center;
+
+    width: 768px;
+    margin: 0 auto;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
 .page-footer__logo {
   display: block;
-  padding: 39px 0 37px 0;
-  text-align: center;
+  width: 128px;
+  padding: 39px 0 37px;
+
+  @media (min-width: 768px) {
+    margin-right: 156px;
+  }
+}
+
+.page-footer__title-image {
+  @media (min-width: 768px) {
+    max-width: 128px;
+  }
 }
 
 .page-footer__copyright {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  min-width: 163px;
   padding-top: 22px;
   padding-bottom: 22px;
+
   font-size: 16px;
   line-height: 18px;
   color: $text-main;
@@ -59,4 +108,10 @@
 .page-footer__element {
   border-top: 1px solid $special-pink;
   border-bottom: 1px solid $special-pink;
+
+  @media (min-width: 768px) {
+    min-width: 129px;
+    margin-right: 138px;
+    border: none;
+  }
 }
