--- a/source/sass/blocks/_promo.scss
+++ b/source/sass/blocks/_promo.scss
@@ -1,21 +1,36 @@
 .promo {
+  position: relative;
   padding-bottom: 22px;
   background: linear-gradient(to bottom, $back-green, $back-green 303px, transparent, transparent 302px);
+
+  @media (min-width: 768px) {
+    background: none;
+  }
 }
 
 .promo__wrapper {
-  padding-right: 20px;
-  padding-left: 20px;
   background-image: url("../img/background-green.jpg");
   background-repeat: no-repeat;
+
+  @media (min-width: 768px) {
+    background: none;
+  }
 }
 
 .promo__inner {
-  padding: 7px 0 15px;
+  padding: 7px 0 29px;
 
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: $oswald;
   text-align: center;
   color: $text-promo;
+
+  @media (min-width: 768px) {
+    padding-left: 87px;
+    padding-bottom: 20px;
+
+    text-align: start;
+    color: $text-dark;
+  }
 }
 
 .promo__title {
@@ -24,19 +39,51 @@
   font-size: 36px;
   font-weight: 400;
   line-height: 36px;
+
+  @media (min-width: 768px) {
+    margin-top: 0;
+    margin-bottom: 41px;
+
+    font-weight: normal;
+    font-size: 60px;
+    line-height: 60px;
+  }
 }
 
 .promo__slogan {
-  margin-bottom: 20px;
+  margin: 0;
   font-size: 14px;
   line-height: 14px;
   text-transform: uppercase;
-}
 
-.promo__btn {
-  padding: 12px 73px;
+  @media (min-width: 768px) {
+    font-size: 20px;
+    line-height: 20px;
+  }
 }
 
 .promo__image {
   display: block;
+
+  @media (min-width: 768px) {
+    display: none;
+  }
+
+  &--tablet {
+    display: none;
+
+    @media (min-width: 768px) {
+      display: block;
+    }
+  }
+}
+
+.promo__btn {
+  @media (min-width: 768px) {
+    position: absolute;
+    max-width: 244px;
+    margin-left: 87px;
+    top: 237px;
+    z-index: 2;
+  }
 }
