--- a/source/sass/blocks/_page-header.scss
+++ b/source/sass/blocks/_page-header.scss
@@ -15,10 +15,17 @@
       padding-right: 30px;
       margin: 0 auto;
     }
+
+    @media (min-width: 1440px) {
+      width: 1440px;
+      padding-left: 110px;
+      padding-right: 110px;
+    }
   }
 
   @media (min-width: 1440px) {
-    padding: 52px 0 29px;
+    padding-top: 52px;
+    padding-bottom: 111px;
   }
 }
 
@@ -27,11 +34,6 @@
   border-bottom: 1px solid $special-pink;
 
   @media (min-width: 768px) {
-    padding: 0;
-    border: none;
-  }
-
-  @media (min-width: 1440px) {
     padding: 0;
     border: none;
   }
