--- a/source/sass/blocks/_offer.scss
+++ b/source/sass/blocks/_offer.scss
@@ -1,4 +1,6 @@
 .offer {
+  display: flex;
+  flex-direction: column;
   padding: 30px 31px 18px 20px;
   margin-bottom: 20px;
   background-color: $back;
@@ -10,6 +12,16 @@
   @media (min-width: 768px) {
     padding: 77px 53px 53px;
     margin-bottom: 30px;
+  }
+
+  @media (min-width: 1440px) {
+    padding: 77px 51px 55px;
+    margin-right: 80px;
+    margin-bottom: 0;
+
+    &--pro {
+      margin-right: 0;
+    }
   }
 }
 
@@ -27,12 +39,16 @@
   color: $text-dark;
 
   @media (min-width: 768px) {
-    max-width: 377px;
     padding-left: 0;
     margin-bottom: 24px;
 
     font-size: 36px;
     line-height: 36px;
+  }
+
+  @media (min-width: 1440px) {
+    align-self: center;
+    margin-bottom: 73px;
   }
 }
 
@@ -56,13 +72,16 @@
 
     border-bottom: none;
   }
+
+  @media (min-width: 1440px) {
+    max-width: 467px;
+  }
 }
 
 .offer__link {
   font-size: 16px;
   line-height: 16px;
   font-family: $oswald;
-  text-align: center;
   text-transform: uppercase;
   color: $text-dark;
 
