--- a/source/sass/blocks/_page-footer.scss
+++ b/source/sass/blocks/_page-footer.scss
@@ -1,4 +1,5 @@
 .page-footer {
+  position: relative;
   background-color: $back;
 
   &--index {
@@ -15,6 +16,16 @@
 
   @media (min-width: 768px) {
     padding: 62px 72px 51px 71px;
+  }
+
+  @media (min-width: 1440px) {
+    position: absolute;
+    top: 80px;
+    left: calc(50vw - 640px);
+
+    max-width: 570px;
+    padding: 66px 89px 51px 76px;
+    background-color: $white;
   }
 }
 
@@ -68,25 +79,28 @@
   @media (min-width: 768px) {
     display: flex;
     align-items: center;
-
-    width: 768px;
-    margin: 0 auto;
-    padding-left: 30px;
-    padding-right: 30px;
   }
 }
 
 .page-footer__logo {
-  display: block;
-  width: 128px;
-  padding: 39px 0 37px;
+  display: flex;
+  justify-content: center;
+
+  padding-top: 39px;
+  padding-bottom: 37px;
 
   @media (min-width: 768px) {
     margin-right: 156px;
   }
+
+  @media (min-width: 1440px) {
+    margin-right: 413px;
+  }
 }
 
 .page-footer__title-image {
+  display: block;
+
   @media (min-width: 768px) {
     max-width: 128px;
   }
@@ -106,12 +120,13 @@
 }
 
 .page-footer__element {
-  border-top: 1px solid $special-pink;
-  border-bottom: 1px solid $special-pink;
-
   @media (min-width: 768px) {
     min-width: 129px;
     margin-right: 138px;
     border: none;
+  }
+
+  @media (min-width: 1440px) {
+    margin-right: 387px;
   }
 }
