--- a/source/sass/blocks/_promo.scss
+++ b/source/sass/blocks/_promo.scss
@@ -4,11 +4,19 @@
   background: linear-gradient(to bottom, $back-green, $back-green 303px, transparent, transparent 302px);
 
   @media (min-width: 768px) {
+    padding-bottom: 526px;
+    background: none;
+  }
+
+  @media (min-width: 1440px) {
+    padding-bottom: 267px;
     background: none;
   }
 }
 
 .promo__wrapper {
+  display: flex;
+  flex-direction: column;
   background-image: url("../img/background-green.jpg");
   background-repeat: no-repeat;
 
@@ -28,7 +36,7 @@
     padding-left: 87px;
     padding-bottom: 20px;
 
-    text-align: start;
+    text-align: left;
     color: $text-dark;
   }
 }
@@ -57,6 +65,8 @@
   text-transform: uppercase;
 
   @media (min-width: 768px) {
+    margin-bottom: 22px;
+
     font-size: 20px;
     line-height: 20px;
   }
@@ -73,17 +83,24 @@
     display: none;
 
     @media (min-width: 768px) {
+      position: absolute;
+      top: 220px;
       display: block;
+      z-index: -1;
+    }
+
+    @media (min-width: 1440px) {
+      top: -15%;
+      left: calc(50vw - 250px);
     }
   }
 }
 
 .promo__btn {
+  order: 3;
   @media (min-width: 768px) {
-    position: absolute;
+    order: 0;
     max-width: 244px;
     margin-left: 87px;
-    top: 237px;
-    z-index: 2;
   }
 }
