--- a/source/sass/blocks/_slider.scss
+++ b/source/sass/blocks/_slider.scss
@@ -1,3 +1,19 @@
+.slider__container-mobile {
+  display: block;
+
+  @media (min-width: 768px) {
+    display: none;
+  }
+}
+
+.slider__container-tablet {
+  display: none;
+
+  @media (min-width: 768px) {
+    display: block;
+  }
+}
+
 .slider__img--after {
   display: none;
 }
