--- a/source/sass/blocks/_checkbox.scss
+++ b/source/sass/blocks/_checkbox.scss
@@ -8,6 +8,10 @@
   padding-left: 45px;
   cursor: pointer;
   user-select: none;
+
+  @media (min-width: 768px) {
+    padding-left: 59px;
+  }
 }
 
 .checkbox__input:checked + .checkbox__svg {
@@ -23,6 +27,14 @@
   margin: 0;
   width: 18px;
   height: 14px;
+
+  @media (min-width: 768px) {
+    top: 2px;
+    left: 8px;
+
+    width: 26px;
+    height: 26px;
+  }
 }
 
 .checkbox__label::before {
@@ -34,12 +46,17 @@
   height: 30px;
 
   border: 1px solid $border;
+
+  @media (min-width: 768px) {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 .checkbox__line {
   fill: $basic-green;
   stroke: $basic-green;
   stroke-width: 1;
-  stroke-miterlimit: 4.0;
+  //stroke-miterlimit: 4.0;
   stroke-dasharray: 0, 154;
 }
