--- a/source/sass/blocks/_form-control.scss
+++ b/source/sass/blocks/_form-control.scss
@@ -27,9 +27,20 @@
     margin: 0;
 
     resize: none;
+
+    @media (min-width: 1440px) {
+      height: 174px;
+    }
   }
 
   &::placeholder {
     color: $text-main;
+  }
+
+  @media (min-width: 768px) {
+    padding: 10px 10px 11px 18px;
+
+    font-size: 20px;
+    line-height: 30px;
   }
 }
