--- a/source/sass/blocks/_menu.scss
+++ b/source/sass/blocks/_menu.scss
@@ -13,6 +13,11 @@
     font-size: 18px;
     line-height: 24px;
   }
+
+  @media (min-width: 1440px) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
 
 .menu__list {
