--- a/source/sass/blocks/_page-header.scss
+++ b/source/sass/blocks/_page-header.scss
@@ -19,13 +19,17 @@
     @media (min-width: 1440px) {
       width: 1440px;
       padding-left: 110px;
-      padding-right: 110px;
+      padding-right: 109px;
     }
   }
 
   @media (min-width: 1440px) {
     padding-top: 52px;
     padding-bottom: 111px;
+
+    &--form {
+      padding-bottom: 72px;
+    }
   }
 }
 
@@ -57,6 +61,10 @@
 
   @media (min-width: 1440px) {
     margin-right: 540px;
+
+    &--form {
+      margin-right: 536px;
+    }
   }
 }
 
